force-app/main/default/objects/Invoice__c/fields/BasePrice__c.field-meta.xml
<CustomField>
    <fullName>BasePrice__c</fullName>
    <label>BasePrice</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>