force-app/main/default/objects/Invoice__c/fields/BasePriceUOM__c.field-meta.xml
<CustomField>
    <fullName>BasePriceUOM__c</fullName>
    <label>BasePriceUOM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>