force-app/main/default/objects/Invoice__c/fields/CustomerPartNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerPartNumber__c</fullName>
    <label>CustomerPartNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>