force-app/main/default/objects/Invoice__c/fields/FreightAmount__c.field-meta.xml
<CustomField>
    <fullName>FreightAmount__c</fullName>
    <label>FreightAmount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>