force-app/main/default/objects/Invoice__c/fields/FreightCharge__c.field-meta.xml
<CustomField>
    <fullName>FreightCharge__c</fullName>
    <label>FreightCharge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>