force-app/main/default/objects/Invoice__c/fields/FreightUOM__c.field-meta.xml
<CustomField>
    <fullName>FreightUOM__c</fullName>
    <label>FreightUOM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>