force-app/main/default/objects/Invoice__c/fields/InvoiceNumberId__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumberId__c</fullName>
    <externalId>true</externalId>
    <label>InvoiceNumberId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>