force-app/main/default/objects/Invoice__c/fields/MiscCharge__c.field-meta.xml
<CustomField>
    <fullName>MiscCharge__c</fullName>
    <label>MiscCharge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>