force-app/main/default/objects/Invoice__c/fields/MiscUOM__c.field-meta.xml
<CustomField>
    <fullName>MiscUOM__c</fullName>
    <label>MiscUOM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>