force-app/main/default/objects/Invoice__c/fields/ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>ProductDescription__c</fullName>
    <label>ProductDescription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>