force-app/main/default/objects/Invoice__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <label>ProductId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>