force-app/main/default/objects/Invoice__c/fields/RewindCharge__c.field-meta.xml
<CustomField>
    <fullName>RewindCharge__c</fullName>
    <label>RewindCharge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>