force-app/main/default/objects/Invoice__c/fields/RewindUOM__c.field-meta.xml
<CustomField>
    <fullName>RewindUOM__c</fullName>
    <label>RewindUOM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>