force-app/main/default/objects/Invoice__c/fields/SheetingCharge__c.field-meta.xml
<CustomField>
    <fullName>SheetingCharge__c</fullName>
    <label>SheetingCharge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>