force-app/main/default/objects/Invoice__c/fields/SheetingUOM__c.field-meta.xml
<CustomField>
    <fullName>SheetingUOM__c</fullName>
    <label>SheetingUOM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>