force-app/main/default/objects/Invoice__c/fields/ShippedVia__c.field-meta.xml
<CustomField>
    <fullName>ShippedVia__c</fullName>
    <label>ShippedVia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OLD DOMINI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>