force-app/main/default/objects/Invoice__c/fields/SlittingCharge__c.field-meta.xml
<CustomField>
    <fullName>SlittingCharge__c</fullName>
    <label>SlittingCharge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>