force-app/main/default/objects/Invoice__c/fields/SlittingUOM__c.field-meta.xml
<CustomField>
    <fullName>SlittingUOM__c</fullName>
    <label>SlittingUOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>