force-app/main/default/objects/Invoice__c/fields/SmallRollCharge__c.field-meta.xml
<CustomField>
    <fullName>SmallRollCharge__c</fullName>
    <label>SmallRollCharge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>