force-app/main/default/objects/Invoice__c/fields/SmallRollUOM__c.field-meta.xml
<CustomField>
    <fullName>SmallRollUOM__c</fullName>
    <label>SmallRollUOM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>