force-app/main/default/objects/Invoice__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <label>TaxAmount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>