force-app/main/default/objects/Invoice__c/fields/TotalBaseUOM__c.field-meta.xml
<CustomField>
    <fullName>TotalBaseUOM__c</fullName>
    <label>TotalBaseUOM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>