force-app/main/default/objects/Invoice__c/fields/TotalDue__c.field-meta.xml
<CustomField>
    <fullName>TotalDue__c</fullName>
    <label>TotalDue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>